--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-icons": "^5.5.0",
     "redis": "^5.10.0"
   },
   "devDependencies": {
