--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "lightweight-charts": "^5.1.0",
     "next": "16.0.8",
     "react": "19.2.1",
