--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@upstash/redis": "^1.35.8",
     "lightweight-charts": "^5.1.0",
     "next": "16.0.8",
     "react": "19.2.1",
