--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "react-icons": "^5.5.0",
-    "redis": "^5.10.0"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
